force-app/main/default/objects/FinancialHolding__c/fields/CurrentValue__c.field-meta.xml
<CustomField>
    <fullName>CurrentValue__c</fullName>
    <label>Current Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>