force-app/main/default/objects/FinancialHolding__c/fields/Market_Impact_Flag__c.field-meta.xml
<CustomField>
    <fullName>Market_Impact_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Market Impact Flag</label>
    <type>Checkbox</type>
</CustomField>