force-app/main/default/objects/FinancialHolding__c/fields/Sector__c.field-meta.xml
<CustomField>
    <fullName>Sector__c</fullName>
    <label>Sector</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>IT</fullName><default>false</default><label>IT</label></value>
            <value><fullName>FMCG</fullName><default>false</default><label>FMCG</label></value>
            <value><fullName>Pharma</fullName><default>false</default><label>Pharma</label></value>
            <value><fullName>Banking</fullName><default>false</default><label>Banking</label></value>
            <value><fullName>Energy</fullName><default>false</default><label>Energy</label></value>
            <value><fullName>Infra</fullName><default>false</default><label>Infra</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>