force-app/main/default/objects/FinancialHolding__c/fields/Unrealised_PnL__c.field-meta.xml
<CustomField>
    <fullName>Unrealised_PnL__c</fullName>
    <label>Unrealised PnL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>